BUG#40459 sporadic failure in rpl_ndb_denote_gap: lost connection during "stop slave"

When slave failed to set the heartbeat period, it did not set err_code
to a non-zero value, which caused the assertion to fail.

This patch fixed it by setting err_code to ER_SLAVE_FATAL_ERROR in this case.